# py-canada-post

./: .gitignore  LICENSE  README.md  pyproject.toml
core/: client.py
core/exceptions/: exception_map.py  exceptions.py
core/services/: __init__.py
core/services/rating/: get_rates.py  types.py
core/utils/: construct_xml_element.py  error_handler.py
core/utils/response_to_object/: __init__.py  rate_to_object.py
tests/: test_rates.py
