[project]
name = "py-canada-post"
version = "0.1.0"
description = "Python library to interact with Canada Post API."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "charset-normalizer==3.4.6",
    "pip==26.0.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "requests==2.33.0",
    "uv==0.11.2",
    "xmltodict>=1.0.4",
]
